<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0FFFFFFF"
    tools:context=".MainActivity">


    <ImageButton
        android:id="@+id/nuevo"
        android:layout_width="84dp"
        android:layout_height="76dp"
        android:layout_marginStart="27dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/b1"
        android:src="@drawable/ic_baseline_control_point_24"
        android:text="@string/b1"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/trazo"
        android:layout_width="72dp"
        android:layout_height="75dp"
        android:layout_marginStart="120dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/b1"
        android:src="@drawable/ic_baseline_border_color_24"
        android:text="@string/b2"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/uploadImageView"
        android:layout_width="82dp"
        android:layout_height="75dp"
        android:layout_marginStart="300dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/b1"
        android:src="@drawable/ic_baseline_file_download_24"
        android:text="@string/b3"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/borrar"
        android:layout_width="83dp"
        android:layout_height="75dp"
        android:layout_marginStart="204dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:contentDescription="@string/b1"
        android:src="@drawable/ic_baseline_how_to_vote_24"
        android:text="@string/b4"
        android:textSize="11sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.dibujoprueba.Area_Dibujo
        android:id="@+id/lienzo2"
        android:layout_width="397dp"
        android:layout_height="536dp"
        android:layout_marginBottom="113dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.225"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadImageView"
        app:layout_constraintVertical_bias="0.0" />

    <ImageButton
        android:id="@+id/negro"
        android:contentDescription="@string/b1"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#040404"
        android:tag="#040404"
        android:text="@string/c1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="parent" />
    <ImageButton
        android:id="@+id/azul"
        android:contentDescription="@string/b1"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#0524CF"
        android:tag="#0524CF"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.274"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/rojo"
        android:contentDescription="@string/b1"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#DD0B0B"
        android:tag="#DD0B0B"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/amarillo"
        android:contentDescription="@string/b1"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#FFC107"
        android:tag="#FFC107"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/rosa"
        android:contentDescription="@string/b1"
        android:layout_width="68dp"
        android:layout_height="62dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="#ff0080"
        android:tag="#ff0080"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.953"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>